@@ -1,5 +1,7 @@
 2009-08-10  Sebastian Marsching <sebastian.marsching@1und1.de>
 
+	Added support for includepart scheme.
+
 	Added extension points for static resource and rewrote 
 	DocrootRequestHandler to use new resource system.
 
